--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,9 @@ jobs:
 
   style:
     name: Style
+    runs-on: ubuntu-latest
+    
+    steps:
       - name: Check out code
         uses: actions/checkout@v4
 
