--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,5 +18,5 @@ jobs:
       with:
         go-version: "1.23.0"
 
-    - neme: Build prod
+    - name: Build prod
       run: ./scripts/buildprod.sh
